--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -5,31 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="View your shopping cart at Rainy Days" />
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/shoppingcart.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/1f3258fb33.js" crossorigin="anonymous"></script>
     <script defer type="module" src="js/shoppingcart.js"></script>
-
-    <!-- Hotjar Tracking Code for https://elaborate-platypus-596ec8.netlify.app/index.html -->
-    <!-- <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 3252744, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script> -->
-    <title>RainyDays | Shopping cart</title>
+    <title>RainyDays | Homepage</title>
   </head>
   <body>
     <header>
@@ -71,21 +55,21 @@
         <section class="cost">
           <div class="cost-info">
             <p>Sub total:</p>
-            <p>99 eur</p>
+            <p class="sub-price">99 eur</p>
           </div>
           <div class="cost-info">
             <p>Shipping:</p>
-            <p>0 eur</p>
+            <p class="shipping-price">0 eur</p>
           </div>
           <div class="cost-info">
             <p>Grand total:</p>
-            <p>99 eur</p>
+            <p class="total-price">99 eur</p>
           </div>
         </section>
       </section>
       <div class="bottom-cta">
         <a href="index.html" class="cta">home</a>
-        <a href="checkout.html" class="cta">checkout</a>
+        <a href="checkout.html" class="cta checkout-cta" id="form-button">checkout</a>
       </div>
     </main>
     <footer>copyright &copy;</footer>
