--- a/about.html
+++ b/about.html
@@ -33,9 +33,9 @@
         <input type="checkbox" id="hamburger-menu" />
         <nav>
           <a href="index.html">Home</a>
-          <a href="collection.html" class="current">Collection</a>
+          <a href="collection.html">Collection</a>
           <a href="contact.html">Contact us</a>
-          <a href="about.html">About us</a>
+          <a href="about.html" class="current">About us</a>
         </nav>
         <div class="shopping-cart">
           <a href="shoppingcart.html"><i class="fas fa-shopping-cart cart-symbol"></i></a>
