--- a/collection.html
+++ b/collection.html
@@ -32,8 +32,8 @@
         <label for="hamburger-menu"><i class="fas fa-bars hamburger-btn"></i></label>
         <input type="checkbox" id="hamburger-menu" />
         <nav>
-          <a href="index.html" class="current">Home</a>
-          <a href="collection.html">Collection</a>
+          <a href="index.html">Home</a>
+          <a href="collection.html" class="current">Collection</a>
           <a href="contact.html">Contact us</a>
           <a href="about.html">About us</a>
         </nav>
