--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,8 @@
         <input type="checkbox" id="hamburger-menu" />
         <nav>
           <a href="index.html">Home</a>
-          <a href="collection.html" class="current">Collection</a>
-          <a href="contact.html">Contact us</a>
+          <a href="collection.html">Collection</a>
+          <a href="contact.html" class="current">Contact us</a>
           <a href="about.html">About us</a>
         </nav>
         <div class="shopping-cart">
@@ -50,7 +50,7 @@
       <section class="contact">
         <div class="message">
           <h2>Send us a direct message!</h2>
-          <form method="post">
+          <form method="get">
             <div class="form-div">
               <label for="email">E-mail</label>
               <div class="form-error" id="email-error">Please enter your email address</div>
@@ -61,7 +61,7 @@
               <div class="form-error" id="message-error">Please enter your message</div>
             </div>
             <textarea id="message" name="message"></textarea>
-            <input type="submit" value="send" class="cta cta-form" />
+            <button class="cta cta-form">Send</button>
           </form>
         </div>
         <div class="contact-info">
@@ -77,6 +77,7 @@
           </div>
         </div>
       </section>
+      <div class="cart content-square"></div>
     </main>
     <footer>copyright &copy;</footer>
   </body>
